tutor prevent collapse & light theme by default

--- a/frontend/src/style.less
+++ b/frontend/src/style.less
@@ -76,6 +76,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 
   h5 {
     margin: 0;
